--- a/index.html
+++ b/index.html
@@ -1,41 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Streaming App</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,viewport-fit=cover" />
+  <title>Live Overlay</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
+  <!-- Actual camera preview (hidden visually, used as source for canvas drawing) -->
+  <video id="video" autoplay playsinline muted></video>
 
-    <!-- VIDEO -->
-    <video id="video" autoplay playsinline></video>
+  <!-- UI real — lo que el usuario ve en pantalla (posiciones controladas por style.css) -->
+  <img id="KALAL_ICON" src="icons/KALAL.png" alt="user" />
+  <div id="KALAL_NAME">KALAL_Y</div>
 
-    <!-- OVERLAY UI (lo que ves en pantalla) -->
-    <img id="userIcon" class="ui" src="icons/KALAL.png">
-    <span id="username" class="ui username">KALAL_Y</span>
+  <div id="VIEWERS_ROW">
+    <img id="EYE_ICON" src="icons/EYE.png" alt="viewers" />
+    <div id="VIEWERS_TEXT">50,604 viewers</div>
+  </div>
 
-    <div id="viewersBox" class="ui">
-        <img id="eyeIcon" src="icons/EYE.png">
-        <span id="viewersCount">51,928 viewers</span>
-    </div>
+  <div id="LIVE_UI">
+    <img id="LIVE_IMG" src="icons/LIVE.png" alt="LIVE" />
+  </div>
 
-    <div id="liveBadge" class="ui">LIVE STREAMING</div>
+  <div id="COMMENTS_UI" aria-hidden="true"></div>
 
-    <!-- COMENTARIOS -->
-    <div id="comments"></div>
+  <div id="BOTTOM_ICONS">
+    <button id="REC_BTN" class="bottom-btn"><img src="icons/REC.png" alt="rec" /></button>
+    <button id="CAM_BTN" class="bottom-btn"><img src="icons/CAM.png" alt="cam" /></button>
+    <button id="HEART_BTN" class="bottom-btn"><img src="icons/HEART.png" alt="heart" /></button>
+  </div>
 
-    <!-- BOTONES INFERIORES -->
-    <div id="controls">
-        <img id="recButton" src="icons/REC.png">
-        <img id="switchCam" src="icons/CAM.png">
-        <img id="likeButton" src="icons/HEART.png">
-    </div>
+  <!-- Hidden canvas used only to create the recorded stream (never shown) -->
+  <canvas id="recordCanvas" style="display:none !important;"></canvas>
 
-    <!-- CANVAS OCULTO PARA GRABACIÓN -->
-    <canvas id="recordCanvas"></canvas>
-
-    <script src="script.js"></script>
+  <script src="script.js" defer></script>
 </body>
 </html>
