--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Live Stream</title>
-    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>KALAL Stream</title>
+    <link rel="stylesheet" href="style.css?v=1001">
 </head>
+
 <body>
 
-    <!-- VIDEO PRINCIPAL -->
-    <video id="video" autoplay playsinline></video>
+    <!-- CÁMARA -->
+    <video id="video" autoplay playsinline muted></video>
 
-    <!-- CANVAS OCULTO PARA GRABAR (NO SE VE) -->
+    <!-- CANVAS OCULTO PARA GRABAR MODO A -->
     <canvas id="recordCanvas" style="display:none;"></canvas>
 
-    <!-- ICONO USUARIO -->
+    <!-- USUARIO -->
     <div id="user-box">
         <img id="userIcon" src="icons/KALAL.png">
     </div>
@@ -34,13 +35,13 @@
     <!-- COMENTARIOS -->
     <div id="comments"></div>
 
-    <!-- BOTONES -->
+    <!-- CONTROLES INFERIORES -->
     <div id="bottomIcons">
-        <img id="recBtn" class="btnIcon" src="icons/REC.png">
-        <img id="camBtn" class="btnIcon" src="icons/CAM.png">
-        <img id="heartBtn" class="btnIcon" src="icons/HEART.png">
+        <img class="btnIcon" id="recBtn" src="icons/REC.png">
+        <img class="btnIcon" id="camBtn" src="icons/CAM.png">
+        <img class="btnIcon" id="heartBtn" src="icons/HEART.png">
     </div>
 
-    <script src="script.js"></script>
+<script src="script.js?v=1001" defer></script>
 </body>
 </html>
