--- a/index.html
+++ b/index.html
@@ -1,49 +1,47 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>KALAL Stream</title>
-  <link rel="stylesheet" href="style.css?v=1001" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>KALAL Stream</title>
+    <link rel="stylesheet" href="style.css?v=1001">
 </head>
+
 <body>
-  <!-- CÁMARA EN DIRECTO -->
-  <video id="liveVideo" autoplay playsinline muted></video>
 
-  <!-- OVERLAY SUPERIOR IZQUIERDA -->
-  <div id="topLeft">
-    <img id="userIcon" src="icons/KALAL.png" alt="KALAL" />
-    <div id="viewersRow">
-      <img id="eyeIcon" src="icons/EYE.png" alt="viewers" />
-      <span id="viewersText">51,824 viewers</span>
+    <!-- CÁMARA -->
+    <video id="video" autoplay playsinline muted></video>
+
+    <!-- CANVAS OCULTO PARA GRABAR MODO A -->
+    <canvas id="recordCanvas" style="display:none;"></canvas>
+
+    <!-- USUARIO -->
+    <div id="user-box">
+        <img id="userIcon" src="icons/KALAL.png">
     </div>
-  </div>
 
-  <!-- LIVE STREAMING ARRIBA DERECHA -->
-  <div id="livePill">
-    <img id="liveIcon" src="icons/LIVE.png" alt="LIVE" />
-  </div>
+    <!-- VIEWERS -->
+    <div id="viewers-box">
+        <img id="eyeIcon" src="icons/EYE.png">
+        <span id="viewersNumber">51,824</span>
+        <span id="viewersLabel">viewers</span>
+    </div>
 
-  <!-- COMENTARIOS (PARTE IZQUIERDA ABAJO) -->
-  <div id="comments"></div>
+    <!-- LIVE STREAMING -->
+    <div id="liveContainer">
+        <img id="liveIcon" src="icons/LIVE.png">
+    </div>
 
-  <!-- BARRA INFERIOR DE ICONOS -->
-  <div id="bottomBar">
-    <button class="iconBtn" id="recBtn">
-      <img id="recIcon" src="icons/REC.png" alt="REC" />
-    </button>
-    <button class="iconBtn" id="camBtn">
-      <img id="camIcon" src="icons/CAM.png" alt="CAM" />
-    </button>
-    <button class="iconBtn" id="heartBtn">
-      <img id="heartIcon" src="icons/HEART.png" alt="HEART" />
-    </button>
-  </div>
+    <!-- COMENTARIOS -->
+    <div id="comments"></div>
 
-  <!-- ELEMENTOS OCULTOS PARA LA MEZCLA (MODO B) -->
-  <video id="rawPlayback" muted playsinline style="display:none;"></video>
-  <canvas id="mixCanvas" style="display:none;"></canvas>
+    <!-- CONTROLES INFERIORES -->
+    <div id="bottomIcons">
+        <img class="btnIcon" id="recBtn" src="icons/REC.png">
+        <img class="btnIcon" id="camBtn" src="icons/CAM.png">
+        <img class="btnIcon" id="heartBtn" src="icons/HEART.png">
+    </div>
 
-  <script src="script.js?v=1001" defer></script>
+<script src="script.js?v=1001" defer></script>
 </body>
 </html>
